Wysiwyg Fields 6.x-1.x-dev, xxxx-xx-xx (Development release)
----------------------------------

- #1075704: Fixed Icon is_dir() open_basedir restrictions issue.
- #1074408: Fixed issue with Pass-by-reference.
- #1074396: Fixed issue with Textareas in Wysiwyg Fields and Drupal.wysiwyg.activeId.
- Added implementation of hook_requirements().
- Fixed issue with inserting multiple Node reference fields.
- Improved icon lookup functionality.
- Improved support for 3rd party fields.
- Updated help documentation.
- Updated translation template.
- Removed all deprecated CVS $Id$ strings.


Wysiwyg Fields 6.x-1.0-alpha1, 2011-02-26
----------------------------------

- Initial 6.x release.