@@ -13,14 +13,14 @@
      * Returns Text node.
      */
     wysiwygGetTextNode: function(element) {
-      return FCKeditorAPI.Instances[Drupal.wysiwyg.activeId].Selection.GetSelection().anchorNode;
+      return FCKeditorAPI.Instances[Drupal.settings.wysiwygFields.activeId].Selection.GetSelection().anchorNode;
     },
 
     /**
      * @TODO - Remove IMG resize helper.
      */
     wysiwygIsNode: function(element) {
-      editor = FCKeditorAPI.Instances[Drupal.wysiwyg.activeId];
+      editor = FCKeditorAPI.Instances[Drupal.settings.wysiwygFields.activeId];
 
       // Create the range for the element.
       range = editor.EditorDocument.createRange();
@@ -37,12 +37,12 @@
      */
     divToWysiwygField: function() {
       delete Drupal.settings.wysiwygFields.timer;
-      if (typeof FCKeditorAPI.Instances[Drupal.wysiwyg.activeId].EditorDocument !== "undefined") {
-        $('wysiwyg_field.wysiwyg_fields-placeholder', FCKeditorAPI.Instances[Drupal.wysiwyg.activeId].EditorDocument.body).each(function() {
+      if (typeof FCKeditorAPI.Instances[Drupal.settings.wysiwygFields.activeId].EditorDocument !== "undefined") {
+        $('wysiwyg_field.wysiwyg_fields-placeholder', FCKeditorAPI.Instances[Drupal.settings.wysiwygFields.activeId].EditorDocument.body).each(function() {
           $(this).removeClass('wysiwyg_fields-placeholder');
           replacement = "<wysiwyg_field id='" + $(this).attr('id') + "' class='" + $(this).attr('class') + "'>" + Drupal.settings.wysiwygFields.replacements['[' + $(this).attr('id') + ']'] + "</wysiwyg_field>";
           Drupal.wysiwygFields.wysiwyg.fckeditor.wysiwygIsNode(this);
-          Drupal.wysiwyg.instances[Drupal.wysiwyg.activeId].insert(replacement);
+          Drupal.wysiwyg.instances[Drupal.settings.wysiwygFields.activeId].insert(replacement);
         });
       }
 
